@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{13FB649F-B96E-43D3-8E0E-F094C9DB6A60}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -45,9 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ast\SyntaxisElement.cs" />
+    <Compile Include="Ast\Identifier.cs" />
     <Compile Include="Ast\LanguageNode.cs" />
     <Compile Include="Ast\LanguageElement.cs" />
     <Compile Include="Ast\ModuleNode.cs" />
+    <Compile Include="Ast\PrimaryExpression.cs" />
     <Compile Include="Ast\TextLiteral.cs" />
     <Compile Include="Ast\TokenElement.cs" />
     <Compile Include="Compiler\EndOfInputException.cs" />
